Prepare for beta release

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Editor Buttons
-version: 1.0.0
+version: 1.1.0-beta.1
 description: Adds additional editor button options
 icon: edit
 author:
@@ -10,9 +10,10 @@ homepage: https://github.com/getgrav/grav-plugin-editor-buttons
 keywords: admin, plugin, editor, buttons
 bugs: https://github.com/getgrav/grav-plugin-editor-buttons/issues
 license: MIT
+testing: true
 
 dependencies:
-  - admin
+  - { name: admin, version: '~1.1' }
 
 form:
   validation: loose
