--- a/languages.yaml
+++ b/languages.yaml
@@ -3,32 +3,44 @@ en:
     ENABLE_BUTTONS: 'Enable buttons'
     INSERT_TABLE_BUTTON: 'Insert Table Button'
     INSERT_NOTICES: 'Insert Notices'
+    INSERT_SHORTCODES: 'Insert Shortcodes'
 
 de:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Aktiviere Buttons'
     INSERT_TABLE_BUTTON: 'Tabellen Button einfügen'
     INSERT_NOTICES: 'Notizen einfügen'
+    INSERT_SHORTCODES: 'Shortcodes einfügen'
 
 it:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Abilita bottoni'
     INSERT_TABLE_BUTTON: 'Inserisci Tabella'
     INSERT_NOTICES: 'Inserisci Notifiche'
+    INSERT_SHORTCODES: 'Inserisci Shortcodes'
 
 ru:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Добавить кнопки'
     INSERT_TABLE_BUTTON: 'Вставить таблицу'
     INSERT_NOTICES: 'Вставить уведомление'
+    INSERT_SHORTCODES: 'Вставить Shortcodes'
     
 fr:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Activer les boutons'
     INSERT_TABLE_BUTTON: 'Insérer un bouton de tableau'
     INSERT_NOTICES: 'Insérer indications'
+    INSERT_SHORTCODES: 'Insérer shortcodes'
 ro:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Activați butoanele'
     INSERT_TABLE_BUTTON: 'Inserați Button'
     INSERT_NOTICES: 'Inserați Notificări'
+    INSERT_SHORTCODES: 'Inserați Shortcodes'
+es:
+  PLUGIN_EDITOR_BUTTONS:
+    ENABLE_BUTTONS: 'Activar botones'
+    INSERT_TABLE_BUTTON: 'Insertar tabla'
+    INSERT_NOTICES: 'Insertar nofificaciones'
+    INSERT_SHORTCODES: 'Insertar shortcodes'
