--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Editor Buttons
-version: 1.1.2
+version: 1.1.3
 description: Adds additional editor button options
 icon: edit
 author:
@@ -49,6 +49,17 @@ form:
         insert_notice:
           type: toggle
           label: PLUGIN_EDITOR_BUTTONS.INSERT_NOTICES
+          highlight: 1
+          default: 0
+          options:
+            1: PLUGIN_ADMIN.ENABLED
+            0: PLUGIN_ADMIN.DISABLED
+          validate:
+            type: bool
+
+        insert_shortcodes:
+          type: toggle
+          label: PLUGIN_EDITOR_BUTTONS.INSERT_SHORTCODES
           highlight: 1
           default: 0
           options:
