Added Shortcode Core + Shortcode UI Button Dropdown  (#23)
* Fixed an issue with the Insert Table button. Prevents the `click` and `mouseover` events from being attached more than once in order to prevent tables from spawning erratically.

* Update editor-buttons.php

* Update editor-buttons.yaml

* Update languages.yaml

* Update blueprints.yaml

* Add files via upload

* Update editor-buttons.php

* Add files via upload

* Update README.md

* Update editor-buttons.php

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -56,3 +56,14 @@ form:
             0: PLUGIN_ADMIN.DISABLED
           validate:
             type: bool
+
+        insert_shortcodes:
+          type: toggle
+          label: PLUGIN_EDITOR_BUTTONS.INSERT_SHORTCODES
+          highlight: 1
+          default: 0
+          options:
+            1: PLUGIN_ADMIN.ENABLED
+            0: PLUGIN_ADMIN.DISABLED
+          validate:
+            type: bool
