--- a/languages.yaml
+++ b/languages.yaml
@@ -25,22 +25,32 @@ ru:
     INSERT_TABLE_BUTTON: 'Вставить таблицу'
     INSERT_NOTICES: 'Вставить уведомление'
     INSERT_SHORTCODES: 'Вставить Shortcodes'
-    
+
 fr:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Activer les boutons'
     INSERT_TABLE_BUTTON: 'Insérer un bouton de tableau'
     INSERT_NOTICES: 'Insérer indications'
     INSERT_SHORTCODES: 'Insérer shortcodes'
+
 ro:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Activați butoanele'
     INSERT_TABLE_BUTTON: 'Inserați Button'
     INSERT_NOTICES: 'Inserați Notificări'
     INSERT_SHORTCODES: 'Inserați Shortcodes'
+
 es:
   PLUGIN_EDITOR_BUTTONS:
     ENABLE_BUTTONS: 'Activar botones'
     INSERT_TABLE_BUTTON: 'Insertar tabla'
     INSERT_NOTICES: 'Insertar nofificaciones'
     INSERT_SHORTCODES: 'Insertar shortcodes'
+
+cs:
+  PLUGIN_EDITOR_BUTTONS:
+    ENABLE_BUTTONS: 'Zviditelnit tlačítka'
+    INSERT_TABLE_BUTTON: 'Tlačítko Vložit tabulku'
+    INSERT_NOTICES: 'Tlačítko Vložit poznámku'
+    INSERT_SHORTCODES: 'Tlačítko Vložit Shortcodes'
+    
